--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <title>App Boilerplate</title>
 <link rel="stylesheet" href="/css/styles.css"/>
+<link rel="stylesheet" href="/css/bootstrap.css"/>
 <body>
 <script src="/bundle.js"></script>
