--- a/public/index.html
+++ b/public/index.html
@@ -3,4 +3,6 @@
 <link rel="stylesheet" href="/css/styles.css"/>
 <link rel="stylesheet" href="/css/bootstrap.css"/>
 <body>
+  <div id="app"></div>
+</body>
 <script src="/bundle.js"></script>
