--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>App Boilerplate</title>
+<title>Simple Reviews</title>
 <link rel="stylesheet" href="/css/styles.css"/>
 <link rel="stylesheet" href="/css/bootstrap.css"/>
 <link rel="stylesheet" href="/vendor/css/selectize.bootstrap3.css"/>
