--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <link rel="stylesheet" href="/css/bootstrap.css"/>
 <link rel="stylesheet" href="/css/styles.css"/>
 <link rel="stylesheet" href="/vendor/css/selectize.bootstrap3.css"/>
+<link rel="stylesheet" href="/vendor/css/image-picker.css"/>
 <body>
 <script src="/vendor/js/jquery.js"></script>
 <script src="/vendor/js/selectize.js"></script>
+<script src="/vendor/js/image-picker.js"></script>
 <script src="/bundle.js"></script>
