added font-awesome icons and a gravatar img for the current user

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <title>Simple Reviews</title>
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/css/bootstrap.css"/>
 <link rel="stylesheet" href="/css/styles.css"/>
 <link rel="stylesheet" href="/vendor/css/selectize.bootstrap3.css"/>
