updated instagram and youtube sections with 3d carousel

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/vendor/css/image-picker.css"/>
 <body>
 <script src="/vendor/js/jquery.js"></script>
+<script src="/vendor/js/cloud9carousel.js"></script>
 <script src="/vendor/js/bootstrap.js"></script>
 <script src="/vendor/js/selectize.js"></script>
 <script src="/vendor/js/image-picker.js"></script>
