--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">    
 <title>Simple Reviews</title>
+</head>
 <link href='http://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Condensed:300,400,700' rel='stylesheet' type='text/css'>
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/css/bootstrap.css"/>
